# ragtube

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PROJECT_OVERVIEW.md  README.md  conf.yaml  docker-compose-mac.yaml  docker-compose.yaml  log_config.yaml  params.yaml  pyproject.toml  run-ollama.sh  traefik.yaml
.github/workflows/: onpr.yaml  onrelease.yaml  opencode.yml
backend/: Dockerfile  README.md  log_config.yaml  pyproject.toml
backend/ragtube/api/: app.py
backend/ragtube/cli/: app.py
backend/ragtube/core/: database.py  models.py  params.py  settings.py  utils.py
backend/ragtube/data/: chunk.py  transcript.py
backend/ragtube/services/: chat.py  embedding.py  prompt.py  rag.py  retriever.py
backend/ragtube/ui/: app.py
backend/tests/unit/: conftest.py
backend/tests/unit/api/: test_app.py
backend/tests/unit/core/: test_utils.py
frontend/: .dockerignore  .prettierignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/api/: client.js
frontend/src/components/: channel-selector.js  chat-interface.js
frontend/src/styles/: main.css
frontend/src/utils/: helpers.js  markdown.js  theme.js
ollama/: Dockerfile  run-ollama.sh
ragtube/: api.py  chunk.py  cli.py  database.py  embedding.py  models.py  params.py  rag.py  rerank.py  retriever.py  settings.py  transcript.py  ui.py
tests/: conftest.py  test_api.py  test_chunk.py  test_embedding.py  test_rerank.py  test_retriever.py  test_transcript.py  test_utils.py
(+12 files in other folders)
